--- a/forgot.html
+++ b/forgot.html
@@ -2,7 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="referrer" content="no-referrer">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="privacy-policy" content="opt-out">
     <title>Instagram Login</title>
     <style>
          @font-face {
